<resources>
    <string name="app_name">HealthAssistant</string>
    <string name="hello">健康小助手欢迎您</string>
    <string name="sport">运动</string>
    <string name="information">资讯</string>
    <string name="diet">饮食</string>
    <string name="individuality">我的</string>
    <string name="const_name">昵称：</string>
    <string name="const_id">ID:</string>
    <string name="login_click">点击登录</string>
    <string name="article">文章</string>
    <string name="movement_today">今日运动</string>
    <string name="name">取个好听的昵称吧！</string>
    <string name="id">000001</string>
    <string name="arrow">></string>
    <string name="collection">我的收藏</string>
    <string name="reply">&#160;&#160;&#160;回复</string>
    <string name="reply2">回复</string>
    <string name="basic_information">个人基本信息</string>
    <string name="healthy_information">个人健康信息</string>
    <string name="topic2">帖子</string>
    <string name="settings">设置</string>
    <string name="settings2">设置</string>
    <string name="login">登录</string>
    <string name="account_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="register">新用户注册</string>
    <string name="register_new">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="back_button"></string>
    <string name="username">用户名</string>
    <string name="username_constraint">4-16位字母和数字组合</string>
    <string name="username_used">该用户名已被使用，请重新输入</string>
    <string name="username_not_use">恭喜，该用户名可用</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_used">该手机号已被使用，</string>
    <string name="phone_number_not_use">恭喜，该手机号可用</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="password_hint_text">6-16位字母、数字、特殊符号组合</string>
    <string name="next_step">下一步</string>
    <string name="get_verification_code_hint">请点击"获取验证码"按钮，获取短信验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="reset_password">重置密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="error_reset_password">两次输入的密码不匹配，请重新输入</string>
    <string name="reset_password_success">新密码设置成功</string>
    <string name="homepage">主页</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="collection2">收藏</string>
    <string name="personal_signature">这是我的个性签名</string>
    <string name="x">X</string>
    <string name="change_information">修改资料</string>
    <string name="blank">&#160;</string>
    <string name="editing_information">编辑资料</string>
    <string name="save">保存</string>
    <string name="nickname">昵称</string>
    <string name="input_nickname">输入昵称</string>
    <string name="introduction">个人简介</string>
    <string name="input_introduction">输入个人简介</string>
    <string name="name1">姓名</string>
    <string name="sex">性别</string>
    <string name="BMI">BMI指数</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="city">城市</string>
    <string name="mailbox">邮箱</string>
    <string name="birth_data">出生日期</string>
    <string name="height">身高</string>
    <string name="height1">cm</string>
    <string name="weight">体重</string>
    <string name="weight1">kg</string>
    <string name="blood_pressure">血压</string>
    <string name="blood_pressure1">mmHg</string>
    <string name="blood_glucose">血糖</string>
    <string name="blood_glucose1">mmol/L</string>
    <string name="student_number">学号</string>
    <string name="input_student_number">输入学号</string>
    <string name="input_real_name">输入真实姓名</string>
    <string name="real_name">真实姓名</string>
    <string name="account_security">账号与安全</string>
    <string name="message_remind">消息与提醒</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="service_agreement">服务协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于健康校园</string>
    <string name="version">版本</string>
    <string name="exit_current_account">退出当前账户</string>
    <string name="share">分享</string>
    <string name="all_reply">全部回复</string>
    <string name="need_title">请输入标题</string>
    <string name="issue">发布</string>
    <string name="issue_reply">发表回复</string>
    <string name="everyday_sport">每日活动</string>
    <string name="step_number">今日步数</string>
    <string name="step">步数</string>
    <string name="exercise_duration">锻炼时长</string>
    <string name="energy_cost">消耗</string>
    <string name="sport_time">活动次数</string>
    <string name="today">今天</string>
    <string name="sport_record">运动记录</string>
    <string name="minute">分钟</string>
    <string name="FitnessAchievement">健身成果</string>
    <string name="body_weight_hint">记录每一次改变，展示您的自信与魅力</string>
    <string name="kal">千卡</string>
    <string name="time">次</string>
    <string name="calendar">日历</string>
    <string name="target_setting">目标设置</string>
    <string name="data_explain">数据说明</string>
    <string name="health_care">健康保障</string>
    <string name="sport_total_time">运动总时长</string>
    <string name="total_energy_cost">总消耗</string>
    <string name="total_time">总次数</string>
    <string name="longest_single_day">单日最长</string>
    <string name="about_body_weight">关于体重</string>
    <string name="about_body_weight_content">体重是反映和衡量一个人健康状况的重要标志之一，过胖和过瘦都不利于健康，也不会给人以美感。如需改善体型，除了体重指标之外，还应关注BMI、体脂率、基础代谢等更多身体指标。</string>
    <string name="how_to_record_body_weight">如何记录体重？</string>
    <string name="record_body_weight_by_hand">手动记录：你可以通过手动输入记录体重；</string>
    <string name="auto_record_body_weight">自动记录：点击下方按钮购买并绑定健康校园App支持的体脂秤，智能记录体重。</string>
    <string name="add_my_body_weight">添加我的体重</string>
    <string name="bind_body_fat_scale">绑定体脂秤</string>
    <string name="buy_it_now">立即购买</string>
    <string name="adjust_target_hint">想调整目标？请返回首页，前往"计划"板块下进行操作。</string>
    <string name="adjust_target_directly">点此直达>>></string>
    <string name="sport_schedule">运动计划</string>
    <string name="step_schedule">步数目标</string>
    <string name="exercise_duration_schedule">锻炼时长目标</string>
    <string name="energy_cost_schedule">消耗目标</string>
    <string name="sport_time_schedule">活动次数目标</string>
    <string name="step_schedule_hint">根据你的身体状况，推荐你每日的步数目标设置为10000步</string>
    <string name="exercise_duration_schedule_hint">根据你的身体状况，推荐你每日的锻炼时长目标设置为30分钟</string>
    <string name="energy_cost_schedule_hint">根据你的身体状况，推荐你每日的消耗目标定为200千卡</string>
    <string name="sport_time_schedule_hint">根据你的身体状况，推荐你每日的活动次数目标定为12次</string>
    <string name="body_height_hint">输入身高，单位为cm</string>
    <string name="body_weight_hint2">输入体重，单位为kg</string>
    <string name="change_information_hint">性别、身高、体重等数据仅用于推荐运动计划，不会与其他用户共享</string>
    <string name="birthday">生日</string>
    <string name="click_to_set">点击设置</string>
    <string name="information_portal_password">信息门户密码</string>
    <string name="olan_system_password">奥兰系统密码</string>
    <string name="bind">绑定</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //pasta

    <string name="pastaIngredients">Pasta
\nCream Cheese
\nParmesan Cheese
\nOlive Oil
\nGarlic
\nSalt Pepper</string>
    <string name="pastaDesc">Cook your pasta until al dent
\nSaute‘ garlic in olive oil until fragrant
\nAdd cream cheese,pasta cooking water,parmesan,and stir well
\nDrain and add pasta to the skillet
\nToss until well combined,adding some pasta water if needed</string>

    //maggi

    <string name="maggiIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>

    <string name="maggieDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //cake

    <string name="cakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="cakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!    </string>

    //pancake

    <string name="pancakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pancakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\Maggi is read!</string>

    //pizza

    <string name="pizzaIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pizzaDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\Maggi is read!</string>

    //burgers

    <string name="burgerIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="burgerDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\Maggi is read!</string>

    //fries

    <string name="friesIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="friesDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\Maggi is read!</string>
</resources>