<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".ui.common.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/information"
        android:onClick="onClick_information"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:drawableTop="@drawable/information"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/information"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/ripple_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sport"
        android:onClick="onClick_sport"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:drawableTop="@drawable/sport"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sport"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:rippleColor="@color/ripple_color" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/diet"
        android:onClick="onClick_diet"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:drawableTop="@drawable/diet"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/diet"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:rippleColor="@color/ripple_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/individuality"
        android:onClick="onClick_individuality"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:drawableTop="@drawable/individuality"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/individuality"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:rippleColor="@color/ripple_color" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>